# novatel_oem7_driver

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  create-binary-package.sh  create-deb.sh  create-foxy-package.sh  create-humble-package.sh  create-jazzy-package.sh  create-kinetic-package.sh  create-melodic-package.sh  create-noetic-package.sh  create_eclipse_project.sh  envsetup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue-template.md  submit-an-issue.md
docker/: Dockerfile  Dockerfile.build  Dockerfile.i386.kinetic.build  Dockerfile.kinetic.build  Dockerfile.kinetic.i386.build  Dockerfile.kinetic.test  Dockerfile.melodic.build  Dockerfile.melodic.test  Dockerfile.noetic.build  Dockerfile.noetic.test  rosdep.yaml  run-build.sh  run-distro-build.sh  run-kinetic-build.sh  run-kinetic-test.sh  run-kinetic.i386-build.sh  run-melodic-build.sh  run-melodic-test.sh  run-noetic-build.sh  run-noetic-test.sh  run-test.sh  run.sh
novatel_oem7/include/: oem7_raw_message_if.hpp
src/novatel_oem7_driver/: CHANGELOG.rst  CMakeLists.txt  novatel_oem7_driver_nodelets.xml  novatel_oem7_driver_plugins.xml  package.xml
src/novatel_oem7_driver/config/: ext_parameteres.yaml  oem7_msgs.yaml  oem7_supported_imus.yaml  std_driver_config.xml  std_driver_config_2.xml  std_init_commands.yaml  std_msg_handlers.yaml  std_msg_topics.yaml  std_msg_topics_2.yaml  std_oem7_raw_msgs.yaml
src/novatel_oem7_driver/include/novatel_oem7_driver/: oem7_imu.hpp  oem7_message_decoder_if.hpp  oem7_message_handler_if.hpp  oem7_message_ids.h  oem7_message_util.hpp  oem7_messages.h  oem7_receiver_if.hpp  oem7_ros_messages.hpp  ros_messages.hpp
src/novatel_oem7_driver/launch/: oem7_file.launch.py  oem7_gps_file.launch  oem7_gps_file_2.launch  oem7_net.launch  oem7_net.launch.py  oem7_net_2.launch  oem7_net_2_ns.launch  oem7_port.launch.py  oem7_tty.launch  oem7_tty_2.launch  oem7_tty_2_ns.launch
src/novatel_oem7_driver/novatel_oem7/include/: oem7_raw_message_if.hpp
src/novatel_oem7_driver/novatel_oem7_driver/: rosbag_comparison.py  testutil.py
src/novatel_oem7_driver/src/: align_handler.cpp  bestpos_handler.cpp  driver_parameter.hpp  ins_handler.cpp  message_handler.cpp  message_handler.hpp  nmea_handler.cpp  odometry_handler.cpp  oem7_config_nodelet.cpp  oem7_debug_file.cpp  oem7_debug_file.hpp  oem7_driver_util.hpp  oem7_imu.cpp  oem7_log_nodelet.cpp  oem7_message_decoder.cpp  oem7_message_decoder_lib.cpp  oem7_message_decoder_lib.hpp  oem7_message_node.cpp  oem7_message_nodelet.cpp  oem7_message_util.cpp  oem7_raw_message_if.hpp  oem7_receiver.hpp  oem7_receiver_file.cpp  oem7_receiver_net.cpp  oem7_receiver_port.cpp  oem7_ros_messages.cpp  oem7_ros_publisher.hpp  receiverstatus_handler.cpp  terrastarinfo_handler.cpp  time_handler.cpp
src/novatel_oem7_driver/test/: README.md  align.bag  align.db3  align.gps  align.test  align.test.py  bestpos.bag  bestpos.db3  bestpos.gps  bestpos.test  bestpos.test.py  ins1.bag  ins1.db3  ins1.gps  ins1.test  ins1.test.py  ins2.bag  ins2.db3  ins2.gps  ins2.test  ins2.test.py  oem7_bist.py  oem7_decoder_test.py  oem7_message_test.py  oem7_publish_test.py  publish_test.xml  rxstatus.bag  rxstatus.db3  rxstatus.gps  rxstatus.test  rxstatus.test.py  time.bag  time.db3  time.gps  time.test  time.test.py
src/novatel_oem7_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/novatel_oem7_msgs/msg/: AccessStatus.msg  BESTGNSSPOS.msg  BESTPOS.msg  BESTUTM.msg  BESTVEL.msg  BestExtendedSolutionStatus.msg  CORRIMU.msg  GeogatingStatus.msg  HEADING2.msg  IMURATECORRIMU.msg  INSAlignmentMode.msg  INSCONFIG.msg  INSExtendedSolutionStatus.msg  INSFrame.msg  INSOutputFrame.msg  INSPVA.msg  INSPVAX.msg  INSReceiverStatus.msg  INSResetType.msg  INSSTDEV.msg  INSSourceStatus.msg  INSUpdate.msg  InertialSolutionStatus.msg  LocalAreaStatus.msg  Oem7Header.msg  Oem7RawMsg.msg  PPPPOS.msg  PositionOrVelocityType.msg  RXSTATUS.msg  RegionRestriction.msg  Rotation.msg  RotationalOffset.msg  SolutionSource.msg  SolutionStatus.msg  SubscriptionPermission.msg  SubscriptionType.msg  SyncState.msg  TERRASTARINFO.msg  TERRASTARSTATUS.msg  TIME.msg  (+2 more)
src/novatel_oem7_msgs/srv/: Oem7AbasciiCmd.srv
