<?xml version="1.0"?>
<package format="2">
  <name>novatel_oem7_msgs</name>

  <version>4.0.0</version>

  <description>
      Messages for NovAtel Oem7 family of receivers.
  </description>

  <maintainer email="support.novatel@hexagon.com">NovAtel Support</maintainer>
  <url type="website">http://www.novatel.com</url>
  <license>MIT</license>

  <url type="repository">https://github.com/novatel/novatel_oem7_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
