<?xml version="1.0"?>
<package format="3">
  <name>novatel_oem7_msgs</name>
  <version>20.1.0</version>
  <description>
      Messages for NovAtel Oem7 family of receivers.
  </description>

  <maintainer email="support.novatel@hexagon.com">NovAtel Support</maintainer>
  <url type="website">http://www.novatel.com</url>
  <license>MIT</license>

  <url type="repository">https://github.com/novatel/novatel_oem7_driver</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
      <build_type>ament_cmake </build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
